<?xml version="1.0" encoding="utf-8"?>
<resources>

   <string name="app_name">ARem Recorder</string>
   <string name="title_activity_recorder">ARem Recorder</string>
   <string name="dummy_button">Dummy Button</string>
   <string name="dummy_content">DUMMY\nCONTENT</string>
   <string name="resolution">Resolution</string>
   <string name="title_activity_dummy">DummyActivity</string>
   <string name="increments">Frame snapshot increment in degrees</string>
   <string name="sensors">Rotation/Orientation Sensors</string>
   <string name="xsensors">Record Extra Sensors</string>
   <string name="title_activity_slide">SlideActivity</string>
   <string name="title_section1">Section 1</string>
   <string name="title_section2">Section 2</string>
   <string name="title_section3">Section 3</string>
   <string name="navigation_drawer_open">Open navigation drawer</string>
   <string name="navigation_drawer_close">Close navigation drawer</string>
   <string name="action_example">Example action</string>
   <string name="action_settings">Settings</string>
   <string name="recording_mode">Recording Mode</string>
   <string name="postprocess">Execute post processing on this Android Device</string>
   <string name="postprocess1">PostProcess</string>
   <string name="postprocess2">on Device</string>

</resources>
