<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="3dp"
>
   <RelativeLayout
         android:id="@+id/layout_name"
         android:layout_height="32sp"
         android:layout_width="match_parent"
         >
      <TextView
            android:id="@+id/label_recording_name"
            android:layout_width="70sp"
            android:layout_height="16sp"
            android:text="Name"
            android:textColor="@android:color/white"
            android:textAppearance="@android:style/TextAppearance.Small"
            />

      <EditText
            android:id="@+id/text_recording_name"
            android:layout_height="29sp"
            android:layout_width="match_parent"
            android:layout_toRightOf="@+id/label_recording_name"
            android:background="@android:color/holo_blue_dark"
            android:maxLines="1"/>
   </RelativeLayout>

   <RelativeLayout
         android:id="@+id/layout_format"
         android:layout_height="38sp"
         android:layout_width="match_parent"
         android:layout_below="@+id/layout_name"
         >
      <TextView
            android:id="@+id/label_format"
            android:layout_width="70sp"
            android:layout_height="16sp"
            android:text="Save File"
            android:textColor="@android:color/white"
            android:textAppearance="@android:style/TextAppearance.Small"
            />
      <TextView
            android:id="@+id/label_format2"
            android:layout_width="70sp"
            android:layout_height="16sp"
            android:layout_below="@+id/label_format"
            android:text="Format"
            android:textColor="@android:color/white"
            android:textAppearance="@android:style/TextAppearance.Small"
            />
      <Spinner
            android:id="@+id/spinner_formats"
            android:layout_height="36sp"
            android:layout_width="match_parent"
            android:layout_toRightOf="@+id/label_format"
            android:prompt="@string/sensors"
            android:contentDescription="@string/sensors"
            android:spinnerStyle="@android:style/Widget.Spinner.DropDown"
            android:drawSelectorOnTop="true"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:background="@android:color/holo_blue_dark"
            android:entries="@array/empty_values"
            />
   </RelativeLayout>

   <RelativeLayout
         android:id="@+id/layout_mode"
         android:layout_height="38sp"
         android:layout_width="match_parent"
         android:layout_below="@+id/layout_format"
         >
      <TextView
            android:id="@+id/label_mode"
            android:layout_width="70sp"
            android:layout_height="16sp"
            android:text="Recording"
            android:textColor="@android:color/white"
            android:textAppearance="@android:style/TextAppearance.Small"
            />
      <TextView
            android:id="@+id/label_mode2"
            android:layout_width="70sp"
            android:layout_height="16sp"
            android:layout_below="@+id/label_mode"
            android:text="Mode"
            android:textColor="@android:color/white"
            android:textAppearance="@android:style/TextAppearance.Small"
            />
      <Spinner
            android:id="@+id/spinner_mode"
            android:layout_height="36sp"
            android:layout_width="match_parent"
            android:layout_toRightOf="@+id/label_mode"
            android:prompt="@string/recording_mode"
            android:contentDescription="@string/recording_mode"
            android:spinnerStyle="@android:style/Widget.Spinner.DropDown"
            android:drawSelectorOnTop="true"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:background="@android:color/holo_blue_dark"
            android:entries="@array/recording_modes"
            />
   </RelativeLayout>

   <RelativeLayout
         android:id="@+id/layout_resolutions"
         android:layout_height="38sp"
         android:layout_width="match_parent"
         android:layout_below="@+id/layout_mode"

    >
      <TextView
            android:id="@+id/label_camera_resolutions"
            android:layout_width="70sp"
            android:layout_height="16sp"
            android:text="Resolution"
            android:textColor="@android:color/white"
            android:textAppearance="@android:style/TextAppearance.Small"
            />

      <Spinner
            android:id="@+id/spinner_camera_resolutions"
            android:layout_height="36sp"
            android:layout_width="match_parent"
            android:layout_toRightOf="@+id/label_camera_resolutions"
            android:prompt="@string/resolution"
            android:contentDescription="@string/resolution"
            android:spinnerStyle="@android:style/Widget.Spinner.DropDown"
            android:drawSelectorOnTop="true"
            android:background="@android:color/holo_blue_dark"
            android:entries="@array/empty_values"
            />
   </RelativeLayout>

   <RelativeLayout
         android:id="@+id/layout_increments"
         android:layout_height="38sp"
         android:layout_width="match_parent"
         android:layout_below="@+id/layout_resolutions"
         >
      <TextView
            android:id="@+id/label_increments"
            android:layout_width="70sp"
            android:layout_height="16sp"
            android:text="Increment"
            android:textColor="@android:color/white"
            android:textAppearance="@android:style/TextAppearance.Small"
            />
      <Spinner
            android:id="@+id/spinner_increments"
            android:layout_height="36sp"
            android:layout_width="match_parent"
            android:layout_toRightOf="@+id/label_increments"
            android:prompt="@string/increments"
            android:contentDescription="@string/increments"
            android:spinnerStyle="@android:style/Widget.Spinner.DropDown"
            android:drawSelectorOnTop="true"
            android:entries="@array/increment_values"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:background="@android:color/holo_blue_dark"
            />
   </RelativeLayout>

   <RelativeLayout
         android:id="@+id/layout_sensor"
         android:layout_height="38sp"
         android:layout_width="match_parent"
         android:layout_below="@+id/layout_increments"
         >
      <TextView
            android:id="@+id/label_sensor"
            android:layout_width="70sp"
            android:layout_height="16sp"
            android:text="Rotation"
            android:textColor="@android:color/white"
            android:textAppearance="@android:style/TextAppearance.Small"
            />
      <TextView
            android:id="@+id/label_sensor2"
            android:layout_width="70sp"
            android:layout_height="16sp"
            android:layout_below="@+id/label_sensor"
            android:text="Sensor"
            android:textColor="@android:color/white"
            android:textAppearance="@android:style/TextAppearance.Small"
            />
      <Spinner
            android:id="@+id/spinner_sensors"
            android:layout_height="36sp"
            android:layout_width="match_parent"
            android:layout_toRightOf="@+id/label_sensor"
            android:prompt="@string/sensors"
            android:contentDescription="@string/sensors"
            android:spinnerStyle="@android:style/Widget.Spinner.DropDown"
            android:drawSelectorOnTop="true"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:background="@android:color/holo_blue_dark"
            android:entries="@array/empty_values"
            />
   </RelativeLayout>

</RelativeLayout>
