<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="3dp"
>
   <RelativeLayout
         android:id="@+id/layout_free_name"
         android:layout_height="32sp"
         android:layout_width="match_parent"
         >
      <TextView
            android:id="@+id/label_free_recording_name"
            android:layout_width="70sp"
            android:layout_height="16sp"
            android:text="Name"
            android:textColor="@android:color/white"
            android:textAppearance="@android:style/TextAppearance.Small"
            />

      <EditText
            android:id="@+id/text_free_recording_name"
            android:layout_height="29sp"
            android:layout_width="match_parent"
            android:layout_toRightOf="@+id/label_free_recording_name"
            android:background="@android:color/holo_blue_dark"
            android:maxLines="1"/>
   </RelativeLayout>

   <RelativeLayout
         android:id="@+id/layout_free_resolutions"
         android:layout_height="38sp"
         android:layout_width="match_parent"
         android:layout_below="@+id/layout_free_name"

    >
      <TextView
            android:id="@+id/label_free_camera_resolutions"
            android:layout_width="70sp"
            android:layout_height="16sp"
            android:text="Resolution"
            android:textColor="@android:color/white"
            android:textAppearance="@android:style/TextAppearance.Small"
            />

      <Spinner
            android:id="@+id/spinner_free_camera_resolutions"
            android:layout_height="36sp"
            android:layout_width="match_parent"
            android:layout_toRightOf="@+id/label_free_camera_resolutions"
            android:prompt="@string/resolution"
            android:contentDescription="@string/resolution"
            android:spinnerStyle="@android:style/Widget.Spinner.DropDown"
            android:drawSelectorOnTop="true"
            android:background="@android:color/holo_blue_dark"
            android:entries="@array/empty_values"
            />
   </RelativeLayout>

   <RelativeLayout
         android:id="@+id/layout_free_sensor"
         android:layout_height="38sp"
         android:layout_width="match_parent"
         android:layout_below="@+id/layout_free_resolutions"
         >
      <TextView
            android:id="@+id/label_free_sensor"
            android:layout_width="70sp"
            android:layout_height="16sp"
            android:text="Rotation"
            android:textColor="@android:color/white"
            android:textAppearance="@android:style/TextAppearance.Small"
            />
      <TextView
            android:id="@+id/label_free_sensor2"
            android:layout_width="70sp"
            android:layout_height="16sp"
            android:layout_below="@+id/label_free_sensor"
            android:text="Sensor"
            android:textColor="@android:color/white"
            android:textAppearance="@android:style/TextAppearance.Small"
            />
      <Spinner
            android:id="@+id/spinner_free_sensors"
            android:layout_height="36sp"
            android:layout_width="match_parent"
            android:layout_toRightOf="@+id/label_free_sensor"
            android:prompt="@string/sensors"
            android:contentDescription="@string/sensors"
            android:spinnerStyle="@android:style/Widget.Spinner.DropDown"
            android:drawSelectorOnTop="true"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:background="@android:color/holo_blue_dark"
            android:entries="@array/empty_values"
            />
   </RelativeLayout>

   <RelativeLayout
         android:id="@+id/layout_free_maxsize"
         android:layout_height="32sp"
         android:layout_width="match_parent"
         android:layout_below="@id/layout_free_sensor"
         >
      <TextView
            android:id="@+id/label_free_maxsize"
            android:layout_width="70sp"
            android:layout_height="16sp"
            android:text="Max Size (Append"
            android:textColor="@android:color/white"
            android:textAppearance="@android:style/TextAppearance.Small"
            />
      <TextView
            android:id="@+id/label_free_maxsize2"
            android:layout_width="70sp"
            android:layout_height="16sp"
            android:layout_below="@id/label_free_maxsize"
            android:text="G=Gigabyte, M or K)"
            android:textColor="@android:color/white"
            android:textAppearance="@android:style/TextAppearance.Small"
            />

      <EditText
            android:id="@+id/text_free_maxsize"
            android:layout_height="29sp"
            android:layout_width="match_parent"
            android:layout_toRightOf="@+id/label_free_maxsize"
            android:background="@android:color/holo_blue_dark"
            android:maxLines="1"/>
   </RelativeLayout>

   <RelativeLayout
         android:id="@+id/layout_free_sensors"
         android:layout_height="38sp"
         android:layout_width="match_parent"
         android:layout_below="@+id/layout_free_maxsize"
         >
      <TextView
            android:id="@+id/label_free_xsensor"
            android:layout_width="70sp"
            android:layout_height="16sp"
            android:text="Record"
            android:textColor="@android:color/white"
            android:textAppearance="@android:style/TextAppearance.Small"
            />
      <TextView
            android:id="@+id/label_free_xsensor2"
            android:layout_width="70sp"
            android:layout_height="16sp"
            android:layout_below="@+id/label_free_xsensor"
            android:text="Sensors"
            android:textColor="@android:color/white"
            android:textAppearance="@android:style/TextAppearance.Small"
            />
      <com.thomashaertel.widget.MultiSpinner
            android:id="@+id/spinner_free_xsensors"
            android:layout_height="36sp"
            android:layout_width="match_parent"
            android:layout_toRightOf="@+id/label_free_xsensor"
            android:prompt="@string/xsensors"
            android:contentDescription="@string/xsensors"
            android:drawSelectorOnTop="true"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:background="@android:color/holo_blue_dark"
            android:entries="@array/empty_values"
            />
   </RelativeLayout>

   <RelativeLayout
         android:id="@+id/layout_free_onoff"
         android:layout_height="38sp"
         android:layout_width="match_parent"
         android:layout_below="@+id/layout_free_sensors"
         >

      <RelativeLayout
            android:id="@+id/layout_free_postprocess"
            android:layout_width="110sp"
            android:layout_height="match_parent"
            android:background="@drawable/rect_border"
            >
         <TextView
               android:id="@+id/label_free_postprocess"
               android:layout_width="80sp"
               android:layout_height="16sp"
               android:text="Off-Device"
               android:textColor="@android:color/white"
               android:textAppearance="@android:style/TextAppearance.Small"
               />
         <TextView
               android:id="@+id/label_free_postprocess2"
               android:layout_width="80sp"
               android:layout_height="16sp"
               android:layout_below="@+id/label_free_postprocess"
               android:text="Finalization"
               android:textColor="@android:color/white"
               android:textAppearance="@android:style/TextAppearance.Small"
               />
         <CheckBox
               android:id="@+id/checkbox_free_postprocess"
               android:layout_height="36sp"
               android:layout_width="30sp"
               android:layout_toRightOf="@+id/label_free_postprocess"
               android:textColor="#ff0000ff"
               />
      </RelativeLayout>

      <RelativeLayout
            android:id="@+id/layout_free_flash"
            android:layout_width="91sp"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/layout_free_postprocess"
            android:background="@drawable/rect_border"
            android:visibility="gone"
            >
         <TextView
               android:id="@+id/label_free_flash"
               android:layout_width="55sp"
               android:layout_height="16sp"
               android:text="Flash On"
               android:textColor="@android:color/white"
               android:paddingLeft="2px"
               android:textAppearance="@android:style/TextAppearance.Small"
               android:visibility="gone"
               />

         <CheckBox
               android:id="@+id/checkbox_free_flash"
               android:layout_height="36sp"
               android:layout_width="37sp"
               android:layout_toRightOf="@+id/label_free_flash"
               android:visibility="gone"
               />
      </RelativeLayout>

<!--
            <RelativeLayout
                  android:id="@+id/layout_free_stitching"
                  android:layout_width="100sp"
                  android:layout_height="match_parent"
                  android:layout_toRightOf="@+id/layout_free_flash"
                  android:background="@drawable/rect_border"
                  >
               <TextView
                     android:id="@+id/label_free_stitching"
                     android:layout_width="70sp"
                     android:layout_height="16sp"
                     android:text="Stitching"
                     android:textColor="@android:color/white"
                     android:paddingLeft="2px"
                     android:textAppearance="@android:style/TextAppearance.Small"
                     />

               <CheckBox
                     android:id="@+id/checkbox_free_stitching"
                     android:layout_height="36sp"
                     android:layout_width="30sp"
                     android:layout_toRightOf="@+id/label_free_stitching"
                     />
            </RelativeLayout>
-->
            <RelativeLayout
                  android:id="@+id/layout_free_api"
                  android:layout_width="115sp"
                  android:layout_height="match_parent"
                  android:layout_toRightOf="@+id/layout_free_flash"
                  android:background="@drawable/rect_border"
                  >
               <TextView
                     android:id="@+id/label_free_api"
                     android:layout_width="85sp"
                     android:layout_height="16sp"
                     android:text="Camera2 API"
                     android:textColor="@android:color/white"
                     android:paddingLeft="2px"
                     android:textAppearance="@android:style/TextAppearance.Small"
                     android:visibility="gone"
                     />

               <CheckBox
                     android:id="@+id/checkbox_free_api"
                     android:layout_height="36sp"
                     android:layout_width="30sp"
                     android:layout_toRightOf="@+id/label_free_api"
                     android:visibility="gone"
                     />
            </RelativeLayout>

         </RelativeLayout>

      </RelativeLayout>
